--- a/style.css
+++ b/style.css
@@ -1,6 +1,45 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     font-family: 'Orbitron', sans-serif;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+}
+
+.container {
+    margin-top: 10rem;
+}
+
+.title {
+    color: blue;
+    font-size: 25px;
+    margin-bottom: 2rem;
+}
+
+.stopwatch {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 2rem;
+    width: 100%;
+}
+
+.minutes, .seconds {
+    color: rgb(65, 65, 65);
+    display: flex;
+    justify-content: center;
+    font-size: 40px;
+    font-weight: 700;
+    min-width: 7rem;
+}
+
+.stopwatch p {
+    font-size: 30px;
+    font-weight: 700;
+
 }
