--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
     font-weight: 700;
 }
 
-.start-pause, .reset {
+.start, .pause, .continue, .reset {
     border-radius: 15px;
     font-size: 12px;
     font-weight: 700;
@@ -61,13 +61,17 @@ body {
     width: 100px;
 }
 
-.start-pause {
+.start {
     background-color: blue;
     color: white;
     border: none;
 }
 
-.reset {
+.reset, .pause, .continue {
     background-color: white;
     border: .5px solid rgb(138, 137, 137);
+}
+
+.pause, .continue {
+    display: none;
 }
